fix empty upcoming events not centered

--- a/resources/sass/home.sass
+++ b/resources/sass/home.sass
@@ -16,7 +16,9 @@
   .events_wrapper
     padding: 15px
     display: flex
+    flex-grow: 1
 
 /* Empty display */
 .empty
   +icon-empty
+  flex-grow: 1
